[gd_scene load_steps=19 format=4 uid="uid://batn8iey4yeus"]

[ext_resource type="FontVariation" uid="uid://weeyd75f2ma7" path="res://fonts/default_font_medium.tres" id="1"]
[ext_resource type="Script" path="res://scripts/RichTextWordRainbow.gd" id="2"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="3"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="4"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="5"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="6"]
[ext_resource type="PackedScene" uid="uid://r6cc2m204dqw" path="res://menus/HBConfirmationWindow.tscn" id="7"]
[ext_resource type="StyleBox" path="res://styles/OptionButtonNormal.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://crfv6jol2l5x3" path="res://graphics/icons/thumb-down.svg" id="9"]
[ext_resource type="Texture2D" uid="uid://84w02fe36br2" path="res://graphics/icons/thumb-up.svg" id="10"]
[ext_resource type="Texture2D" uid="uid://j24c3y62014l" path="res://graphics/icons/twitter.svg" id="11"]
[ext_resource type="Script" path="res://rythm_game/ResultsScreen.gd" id="12"]
[ext_resource type="PackedScene" uid="uid://n2yd8i4x5hox" path="res://menus/SongTitleScrolling.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://u7xd1sepbnm5" path="res://menus/tabbed_container/TabbedContainer.tscn" id="14"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="RichTextEffect" id="6"]
script = ExtResource("2")

[sub_resource type="StyleBoxFlat" id="4"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.0901961, 0.556863, 0.74902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="5"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.19, 0.07, 0.3, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[node name="ResultsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4")
script = ExtResource("12")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 19

[node name="SongTitle" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource("13")]
self_modulate = Color(0, 0, 1, 1)
material = null
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ResultRatingLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
auto_translate_mode = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "(NT)PERFECT"

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("6")
theme_override_styles/normal = SubResource("1")
bbcode_enabled = true
text = "HI-SCORE!!!"
custom_effects = [SubResource("6")]

[node name="PercentageLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("6")
text = "(NT)100.00%"
horizontal_alignment = 2

[node name="TabbedContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2" instance=ExtResource("14")]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07
theme_override_constants/separation = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Panel3" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel3/MarginContainer"]
layout_mode = 2
focus_mode = 2
alignment = 1
script = ExtResource("3")

[node name="HBHovereableButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/normal = ExtResource("8")
text = "Retry"
script = ExtResource("5")
normal_style = ExtResource("8")
hover_style = SubResource("4")

[node name="ShareOnTwitterButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/normal = ExtResource("8")
text = "Share"
icon = ExtResource("11")
script = ExtResource("5")
normal_style = ExtResource("8")
hover_style = SubResource("4")

[node name="HBHovereableButton2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/normal = ExtResource("8")
text = "Return"
script = ExtResource("5")
normal_style = ExtResource("8")
hover_style = SubResource("4")

[node name="RatingPopup" type="Popup" parent="."]
size = Vector2i(837, 170)

[node name="Panel" type="PanelContainer" parent="RatingPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("5")

[node name="MarginContainer" type="MarginContainer" parent="RatingPopup/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="RatingPopup/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="RatingPopup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "What did you think of the song you just played?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RatingPopup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("3")

[node name="UpvoteButton" type="Button" parent="RatingPopup/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("10")
script = ExtResource("5")

[node name="DownvoteButton" type="Button" parent="RatingPopup/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("9")
script = ExtResource("5")

[node name="NoOpinionButton" type="Button" parent="RatingPopup/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "No opinion"
script = ExtResource("5")

[node name="SkipButton" type="Button" parent="RatingPopup/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Don't ask me again"
script = ExtResource("5")

[node name="HBConfirmationWindow" parent="." instance=ExtResource("7")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 650.0
offset_bottom = 409.0
grow_horizontal = 1
grow_vertical = 1
has_cancel = false
text = ""

[node name="TextLabel" parent="HBConfirmationWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" index="0"]
text = ""

[node name="CancelButton" parent="HBConfirmationWindow/Panel/MarginContainer/VBoxContainer/ButtonContainer" index="1"]
visible = false

[editable path="HBConfirmationWindow"]
